Added READMEs and edited scripts for outside use.

--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,11 @@
 .RData
 .Ruserdata
 /Results/*
+/README.Rmd
+/Data/README.Rmd
+/Scripts/README.Rmd
 /Data/PVV_BLUE.RData
 /Figures/*
 *.e*
 *.o*
+*JLN*
